home-assistant/ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-label
  template:
    metadata:
      labels:
        app: homeassistant-label
    spec:
      hostNetwork: true
      # nodeSelector:
      #   kubernetes.io/hostname: homelab-03
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:2024.4
        imagePullPolicy: IfNotPresent
        strategy:
          type: Recreate
        ports:
          - containerPort: 8123
        resources: {}
        volumeMounts:
          - mountPath: /config
            name: homeassistant-pv-config
          # - mountPath: /etc/localtime
          #   name: homeassistant-pv-time
          #   readOnly: true
          # - name: ttyacm
          #   mountPath: /dev/ttyUSB0
      restartPolicy: Always
      volumes:
        - name: homeassistant-pv-config
          persistentVolumeClaim:
            claimName: homeassistant-pvc
        # - name: homeassistant-pv-time
        #   persistentVolumeClaim:
        #     claimName: homeassistant-pv-time
        #     readOnly: true
        # - name: ttyacm
        #   hostPath:
        #     path: /dev/ttyUSB0
status: {}
