home-assistant/ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
spec:
  selector:
    app: homeassistant-label
  ports:
  - name: homeassistant
    port: 8123
    targetPort: 8123
  type: LoadBalancer
